--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <main>
         <!--Tìtulo-->
-        <section class="container w-50">
-            <p class="text-white text-sm-center fs-1 fw-bolder lh-sm">
+        <section class="container w-75">
+            <p class="text-white text-sm-center align-content-sm-center fs-1 fw-bolder lh-sm">
                 Previsões do tempo atualizada a cada hora e para 10 dias
             </p>
         </section>
