--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
-
     <title>Previsão do tempo via HG Weather</title>
 </head>
 
-<body>
+<body style="background-color: #19322f">
     <!--Navbar superior-->
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #051d1b">
         <div class="container-fluid">
@@ -47,14 +45,44 @@
             </p>
         </section>
         <!--Descrição-->
-        <section class="container w-75">
+        <section class="container w-50">
             <p class="text-sm-center text-white fs-5">
-                Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperados os dados de clima atual e do clima previsto para 10 dias. Foi usada a linguagem Java para requisição dos dados via HTTP Request à API, assim como tratamento, parseamento e geração dos arquivos html. Além dessa exibição, a cada atualização será remetido um e-mail cadastrado no arquivo de configuração.
+                Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperados os dados de clima atual e do clima previsto para 10 dias. 
             </p>
-            <p class="text-sm-center text-white fs-5" id="desc_github">
+            <p class="text-sm-center text-white fs-5">
+                Foi usada a linguagem Java para requisição dos dados via HTTP Request à API, assim como tratamento, parseamento e geração dos arquivos html. Além dessa exibição, a cada atualização será remetido um e-mail cadastrado no arquivo de configuração.
+            </p>
+            <p class="text-sm-center text-white fs-5">
                 O repositório do projeto consta no 
-                <a href="https://github.com/MarcusVieira01/Previsao_tempo_HGBrasilApi">GitHub.</a>
+                <a href="https://github.com/MarcusVieira01/Previsao_tempo_HGBrasilApi" style="color: white">GitHub.</a>
             </p>
+        </section>
+        <!--Cards-->
+        <section class="text-white">
+            <div class="row justify-content-center">
+                <div class="col-sm-4">
+                    <div class="card" style="border: #566f6c">
+                        <div class="card-body" style="background-color: #425b58">
+                            <h5 class="card-title">Clima atual</h5>
+                            <p class="card-text">Report sobre o clima atual, com update a cada hora.</p>
+                            <a href="#" class="btn btn-primary fw-bolder" style="background-color: white; color: black; border: white">
+                                Ver clima atual
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="border: #566f6c">
+                        <div class="card-body" style="background-color: #425b58">
+                            <h5 class="card-title">Previsão do clima para 10 dias - Forecast</h5>
+                            <p class="card-text">Report sobre a previsão do tempo para 10 dias.</p>
+                            <a href="#" class="btn btn-primary fw-bolder" style="background-color: white; color: black; border: white">
+                                Ver previsão longa
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
