--- a/forecast.html
+++ b/forecast.html
@@ -35,6 +35,15 @@
         </div>
     </nav>
 
+    <footer>
+        <p class="text-white text-center">
+            Desenvolvido por Marcus Vieira - 2MV ProdTech
+            <a href="https://github.com/MarcusVieira01" style="color: white">
+                Github
+            </a>
+        </p>
+    </footer>
+
     <!--CDN do Bootstrap para JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
