--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main>
         <!--Tìtulo-->
-        <section class="container w-75 mt-4">
+        <section class="container w-75 mt-3">
             <p class="text-white text-sm-center align-content-sm-center fs-1 fw-bolder lh-sm">
                 Previsões do tempo atualizada a cada hora e para 10 dias
             </p>
@@ -60,9 +60,9 @@
         </section>
 
         <!--Cards-->
-        <section class="text-white mt-5">
+        <section class="text-white mt-3">
             <div class="row justify-content-center">
-                <div class="col-sm-4">
+                <div class="col-sm-4 pt-3">
                     <div class="card" style="border: #566f6c">
                         <div class="card-body text-center" style="background-color: #425b58">
                             <p class="card-title fs-4 fw-bold">
@@ -71,23 +71,23 @@
                             <p class="card-text">
                                 Report sobre o clima atual, com update a cada hora.
                             </p>
-                            <a href="atual.html" class="btn btn-primary fw-bolder" style="background-color: white; color: black; border: white">
-                                Ver clima atual
+                            <a href="atual.html" class="btn btn-primary fw-bolder w-50" style="background-color: white; color: black; border: white">
+                                Ver atual
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 pt-3 pb-2">
                     <div class="card" style="border: #566f6c">
                         <div class="card-body  text-center" style="background-color: #425b58">
                             <p class="card-title fs-4 fw-bold">
-                                Previsão do clima para 10 dias - Forecast
+                                Previsão para 10 dias - Forecast
                             </p>
                             <p class="card-text">
                                 Report sobre a previsão do tempo para 10 dias.
                             </p>
-                            <a href="forecast.html" class="btn btn-primary fw-bolder" style="background-color: white; color: black; border: white">
-                                Ver previsão longa
+                            <a href="forecast.html" class="btn btn-primary fw-bolder w-50" style="background-color: white; color: black; border: white">
+                                Ver forecast
                             </a>
                         </div>
                     </div>
@@ -96,6 +96,17 @@
         </section>
 
     </main>
+
+    <hr class="border-white opacity-25">
+
+    <footer>
+        <p class="text-white text-center">
+            Desenvolvido por Marcus Vieira - 2MV ProdTech
+            <a href="https://github.com/MarcusVieira01" style="color: white">
+                Github
+            </a>
+        </p>
+    </footer>
 
     <!--CDN do Bootstrap para JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
