--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             <a href="https://github.com/MarcusVieira01" style="color: white">
                 Github
             </a>
+            <img alt="imagem logo github" style="height: 50px; width: 50px" 
+            src="./img/kisspng-github-logo-repository-computer-icons-5afa376c51ca94.387166531526347628335.png">
         </p>
     </footer>
 
