--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
         <!--Descrição-->
         <section class="container w-50 mt-4">
-            <p class="text-sm-center text-white fs-5">
+            <p class="text-sm-center text-white fs-5 lh-sm">
                 Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperados os dados de clima atual e do clima previsto para 10 dias. 
             </p>
-            <p class="text-sm-center text-white fs-5">
+            <p class="text-sm-center text-white fs-5 lh-sm">
                 Foi usada a linguagem Java para requisição dos dados via HTTP Request à API, assim como tratamento, parseamento e geração dos arquivos html. Além dessa exibição, a cada atualização será remetido um e-mail cadastrado no arquivo de configuração.
             </p>
-            <p class="text-sm-center text-white fs-5">
+            <p class="text-sm-center text-white fs-5 lh-sm">
                 O repositório do projeto consta no 
                 <a href="https://github.com/MarcusVieira01/Previsao_tempo_HGBrasilApi" style="color: white">GitHub.</a>
             </p>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 pt-3 pb-2">
+                <div class="col-sm-4 pt-3 pb-4">
                     <div class="card" style="border: #566f6c">
                         <div class="card-body  text-center" style="background-color: #425b58">
                             <p class="card-title fs-4 fw-bold">
@@ -104,9 +104,9 @@
             Desenvolvido por Marcus Vieira - 2MV ProdTech
             <a href="https://github.com/MarcusVieira01" style="color: white">
                 Github
+                <img alt="imagem logo github" style="height: 42px; width: 42px" 
+                src="./img/kisspng-github-logo-repository-computer-icons-5afa376c51ca94.387166531526347628335.png">
             </a>
-            <img alt="imagem logo github" style="height: 50px; width: 50px" 
-            src="./img/kisspng-github-logo-repository-computer-icons-5afa376c51ca94.387166531526347628335.png">
         </p>
     </footer>
 
