--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
     <main>
         <!--Tìtulo-->
-        <section class="container w-75 mt-3">
+        <section class="container mt-3">
             <p class="text-white text-sm-center align-content-sm-center fs-1 fw-bolder lh-sm">
                 Previsões do tempo atualizada a cada hora e para 10 dias
             </p>
         </section>
 
         <!--Descrição-->
-        <section class="container w-50 mt-4">
+        <section class="container w-75 mt-4">
             <p class="text-sm-center text-white fs-5 lh-sm">
                 Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperados os dados de clima atual e do clima previsto para 10 dias. 
             </p>
