--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
 
     <main>
         <!--Tìtulo-->
-        <section class="container mt-3">
-            <p class="text-white text-sm-center align-content-sm-center fs-1 fw-bolder lh-sm">
+        <section class="container align-content-sm-center w-75 mt-3">
+            <p class="text-white text-sm-center fs-1 fw-bolder lh-sm">
                 Previsões do tempo atualizada a cada hora e para 10 dias
             </p>
         </section>
 
         <!--Descrição-->
-        <section class="container w-75 mt-4">
-            <p class="text-sm-center text-white fs-5 lh-sm">
+        <section class="container w-75 mt-4 text-sm-center">
+            <p class="text-white fs-5 lh-sm">
                 Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperados os dados de clima atual e do clima previsto para 10 dias. 
             </p>
-            <p class="text-sm-center text-white fs-5 lh-sm">
+            <p class="text-white fs-5 lh-sm">
                 Foi usada a linguagem Java para requisição dos dados via HTTP Request à API, assim como tratamento, parseamento e geração dos arquivos html. Além dessa exibição, a cada atualização será remetido um e-mail cadastrado no arquivo de configuração.
             </p>
-            <p class="text-sm-center text-white fs-5 lh-sm">
+            <p class="text-white fs-5 lh-sm">
                 O repositório do projeto consta no 
                 <a href="https://github.com/MarcusVieira01/Previsao_tempo_HGBrasilApi" style="color: white">GitHub.</a>
             </p>
