--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <p class="card-text">
                                 Report sobre o clima atual, com update a cada hora.
                             </p>
-                            <a href="atual.html" class="btn btn-primary fw-bolder w-50" style="background-color: white; color: black; border: white">
+                            <a href="atual.html" class="btn btn-primary fw-bolder w-50" style="font-size: 12px; background-color: white; color: black; border: white">
                                 Ver atual
                             </a>
                         </div>
@@ -81,12 +81,12 @@
                     <div class="card" style="border: #566f6c">
                         <div class="card-body  text-center" style="background-color: #425b58">
                             <p class="card-title fs-4 fw-bold">
-                                Previsão para 10 dias - Forecast
+                                Previsão Forecast
                             </p>
                             <p class="card-text">
                                 Report sobre a previsão do tempo para 10 dias.
                             </p>
-                            <a href="forecast.html" class="btn btn-primary fw-bolder w-50" style="background-color: white; color: black; border: white">
+                            <a href="forecast.html" class="btn btn-primary fw-bolder w-50" style="font-size: 12px; background-color: white; color: black; border: white">
                                 Ver forecast
                             </a>
                         </div>
