--- a/forecast.html
+++ b/forecast.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="atual.html">Atual</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="forecast.html">Para 10 dias</a>
+                        <a class="nav-link active" href="forecast.html">Forecast</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/MarcusVieira01">Desenvolvedor</a>
