--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="atual.html">Atual</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="forecast.html">Para 10 dias</a>
+                        <a class="nav-link" href="forecast.html">Forecast</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/MarcusVieira01">Desenvolvedor</a>
