--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <!--Descrição-->
         <section class="container w-75 mt-4 text-sm-center">
             <p class="text-white fs-5 lh-sm">
-                Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperados os dados de clima atual e do clima previsto para 10 dias. 
+                Projeto de exibição dos dados obtidos da HG Weather API, onde serão recuperadas informações pertinentes ao clima atual e
+                
+                previsto para 10 dias. 
             </p>
             <p class="text-white fs-5 lh-sm">
                 Foi usada a linguagem Java para requisição dos dados via HTTP Request à API, assim como tratamento, parseamento e geração dos arquivos html. Além dessa exibição, a cada atualização será remetido um e-mail cadastrado no arquivo de configuração.
